<resources>
    <string name="app_name">SeizSafe</string>
    <string name="action_settings">Settings</string>
    <string name="SEIZSAFE">SEIZSAFE</string>
    <string name="SEIZ">SEIZ</string>
    <string name="SAFE">SAFE</string>
    <string name="buscar">Buscar</string>
    <string name="salir">Salir</string>
    <string name="sensibilidad">Sensibilidad:</string>
    <string name="UmbralA">Acelerómetro A:</string>
    <string name="UmbralB">Acelerómetro B:</string>
    <string name="UmbralBl">Acelerómetro Bluetooth:</string>
    <string name="Picos">Tiempo entre picos:</string>
    <string name="crisis">Tiempo min crisis:</string>
    <string name="falsa_alarma">Tiempo para falsa alarma:</string>
    <string name="Guardar">Guardar</string>
    <string name="UtilizarWifi">Utilizar una red Wi-Fi autogenerada por el propio dispositivo</string>
    <string name="ConectarWifi">Conectar a una red Wi-Fi existente</string>
    <string name="Configuracion_wifi_existente">Configuración para conectar a una red Wi-Fi existente</string>
    <string name="Configuracion_wifi_propia">Configuración para crear una red Wi-Fi</string>
    <string name="Red_diponible">Redes disponibles:</string>
    <string name="Ip_DHCP">Obtener una dirección IP automáticamente (DHCP)</string>
    <string name="IP_estatica">Establecer una IP estática</string>
    <string name="IP_Direccion">Dirección IP</string>
    <string name="IP_Mascara">Máscara de red</string>
    <string name="IP_Puerta">Puerta de enlace</string>
    <string name="SSID">SSID</string>
    <string name="Contrasena">Contraseña</string>
    <string name="SSIDMensaje">El dispositivo creará una red Wi-Fi que deberá configurar en su equipo para poder acceder a esta aplicación. Una vez conectado a la red, la dirección IP del dispositivo será 10.10.0.1</string>
    <string name="ConectarWifi2">Conectar a red Wi-Fi</string>
    <string name="Aceptar">Aceptar</string>
    <string name="Configurar_grabacion">CONFIGURAR GRABACION</string>
    <string name="Control_automatico">Control Automatico</string>
    <string name="Control_manual">Control Manual</string>
    <string name="Grabar">GRABAR</string>
    <string name="Parar">PARAR</string>
    <string name="parar">parar</string>
    <string name="Texto_Configurar_Grabacion">Utilizar el modo de inicio y parada automático</string>
    <string name="Hora_Inicio">Hora Inicio</string>
    <string name="Hora_Fin">Hora Fin</string>
    <string name="Estado_alertas">ALERTAS</string>
    <string name="Conectado">CONECTADO</string>
    <string name="Conectando">CONECTANDO...</string>
    <string name="Desconectado">DESCONECTADO</string>
    <string name="ON">ON</string>
    <string name="OFF">OFF</string>
    <string name="Evento">Evento</string>
    <string name="Clasificacion">Clasificación:</string>
    <string name="Camara">CAMARA</string>
    <string name="Desconectada">DESCONECTADA</string>
    <string name="Encontrado">Encontrado:</string>
    <string name="wifiConectado">Se ha conectado a la Seizsafe:</string>
    <string name="mensajeWifi">La busqueda dura aproximadamente dos min.</string>
    <string name="Buscando">Buscando:</string>
    <string name="mensajeWifi_disponible">No hay redes wifi disponibles</string>
    <string name="Guardado_Ok">Todo ha sido guardado correctamete:</string>
    <string name="Ip_incorrecta">La dirección Ip es incorrecta</string>
    <string name="Mascara_incorrecta">Máscara de red incorrecta</string>
    <string name="Puerta_incorrecta">La Puerta de red es incorrecta</string>
    <string name="Ip_rango">La ip supera el rango de 255</string>
    <string name="Mascara_rango">La máscara supera el rango de 255</string>
    <string name="Puerta_rango">La puerta supera el rango de 255</string>
    <string name="Cambios_Ok">Los cambios se han efectuado correctamente</string>
    <string name="Cambios_Error">Error en los cambios</string>
    <string name="Datos_Manuales">Datos manuales, no se hace responsable SeizSafe de que funcionen correctamente</string>
    <string name="Ajustes_Manuales">Ajustes Manuales</string>
    <string name="Ajustes_Automaticos">Ajustes Automaticos</string>
    <string name="Seleccion">Selección</string>
    <string name="Revisado">Revisado</string>
    <string name="Norevisado">No Revisado</string>
    <string name="Informacion">Informacion</string>
    <string name="Eventos_ninguno">No hay eventos almacenados</string>
    <string name="Conexion_erronea">No se tiene conexion Seizsafe</string>
    <string name="Camara_Off">No esta conectada la cámara</string>
    <string name="Alertas_Off">Se ha parado el servicio de Alertas.</string>
    <string name="Alertas_Reiniciar">No esta conectado el sistema de alertas de Seizsafe ¿Reintentar?</string>
    <string name="Cancelar">Cancelar</string>
    <string name="Reintentar">Reintentar</string>
    <string name="Activar_Alertas">Activar Alertas de SeizSafe</string>
    <string name="Servicio_Finalizado">Servicio finalizado</string>
    <string name="Servicio_Iniciado">Servicio iniciado</string>
    <string name="Error_Json">Did not work!</string>
    <string name="Modificar_Avanzadas">Modificar Avanzadas</string>
    <string name="Red">Red</string>
    <string name="Ip_Seizsafe">IP: Seizsafe</string>
    <string name="Conectar">Conectar</string>
    <string name="MensajeIPVideos">Si la Ip que se muestra no se corresponde con la de Seizsafe modifique la para que pueda configurar Seizsafe y poder ver los vídeos almacenados.</string>
    <string name="Crisis">Crisis</string>
    <string name="Error_hora">Error al configurar la hora. Hay un dato erróneo.</string>
    <string name="Cambiar">Cambiar</string>
    <string name="Falsa_Alarma">Falsa Alarma</string>
    <string name="Modificar_IP">Modificar IP</string>
    <string name="Estadisticas">ESTADISTICAS</string>
    <string name="Codigo">Código:</string>
    <string name="Nombre">Nombre:</string>
    <string name="AnadirIp">Añadir dispositivo de Alertas</string>
    <string name="Desea_varias_Seizsafe">Desea añadir la IP para poder ver datos de varias Seizsafe:</string>
    <string name="Anadir">Añadir</string>
    <string name="No_anadir">No Añadir</string>
    <string name="Seleccionar_Seizsafe">SELECCIONAR SEIZSAFE</string>
    <string name="InfoSelecip">Selecciona la Seizsafe de la lista.</string>
    <string name="CambioIP">La Ip ha sido cambiada.</string>
    <string name="ErrorIP">No hay suficientes Seizsafe en la lista</string>
    <string name="PararAlertas">Deseas parar la alerta de </string>
    <string name="Activar_alertas">ACTIVAR ALERTAS </string>
    <string name="Mensaje_Borrar_Seizsafe">Desea desvincular la Seizsafe </string>
    <string name="IniciarAlertas">Deseas iniciar la alerta de </string>
    <string name="Iniciar">INICIAR</string>
    <string name="Idiomas">IDIOMAS</string>
    <string name="Español">Español</string>
    <string name="Manual">MANUAL</string>
    <string name="Ingles">Inglés</string>
    <string name="Ok">OK</string>
    <string name="ErrorWifi">No esta habilitada la antena wifi</string>
    <string name="AvisoErrorWifiReinicio">La antena Wifi esta desconectada, activela y vuelva a cargar la aplicación, gracias</string>
    <string name="AvisoErrorWifi">La antena Wifi esta desconectada, activela y podrá continuar, gracias</string>
    <string name="ErrorDesconectacto">No se esta conectado a ningún dispositivo Seizsafe de alertas</string>
    <string name="ErrorYaConec">Ya se esta conectado a un dispositivo de alertas Seizsafe</string>
    <string name="noCrisis">No se ha producido crisis</string>
    <string name="Seleccionar_idioma">Seleccionar el idioma deseado:</string>
    <string name="Dispositivo">Dispositivo</string>
    <string name="Dispositivo_ip">Dispositivo IP</string>
    <string name="Estado">Estado</string>
    <string name="Sensor">Sensor</string>
    <string name="NoEnlazado">No Enlazado</string>
    <string name="Enlazado">Enlazado</string>
    <string name="Codigo_Seizsafe">Código Seizsafe:</string>
    <string name="Error_Ip">En caso de no conocer el código del dispositivo Seizsafe tendra que consultar el envoltorio</string>
    <string name="Codigo_Incorrecto">Codigo incorrecto</string>
    <string name="Monitorifando">Monitorizando</string>
    <string name="Si">SI</string>
    <string name="No">NO</string>
    <string name="Borrar_Seizsafe">DESVINCULAR SEIZSAFE</string>
    <string name="Desenlazar">Desenlazar</string>
    <string name="Mensaje_salir">Pulsar otra vez para salir</string>
    <string name="Vinculado">Vinculado</string>
    <string name="Desvinculado">Desvinculado</string>
    <string name="local_service_started">Se esta produciendo un ataque</string>
    <string name="local_service_label">¡¡ALERTA!!</string>
    <string name="local_service_conexion">¡¡CONEXION!!</string>
    <string name="local_service_started_conexion">Se ha perdido la conexion</string>
    <string name="cargando">Cargando</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_menu">Menú</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="correo">info@encore-lab.com</string>
    <string name="conectarblu">CONECTAR BLUETOOTH</string>
    <string name="conectarwifi">CONECTAR WIFI</string>
    <string name="Listadevídeos">LISTA DE VÍDEOS</string>
    <string name="vídeoendirecto">VÍDEO EN DIRECTO</string>
    <string name="configurar">CONFIGURAR SEIZSAFE</string>
    <string name="configurar_conexion">CONFIGURAR CONEXIÓN</string>
    <string name="ataques">ATAQUES</string>
    <string name="title_activity_reproductor">Reproductor</string>
    <string name="IP_SeizSafe">IP SEIZSAFE</string>
    <string name="Buscar">BUSCAR SEIZSAFE</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_activity_busqueda_wifi">activity_busqueda_wifi</string>
    <string name="title_activity_busqueda_wifi">busqueda_wifi</string>
</resources>