<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_video_directo" android:icon="@drawable/ic_menu_slideshow_negro"
            android:title="@string/vídeoendirecto"
            />
        <item android:id="@+id/nav_borrar_Seizsafe" android:icon="@drawable/ic_menu_delete"
            android:title="@string/Borrar_Seizsafe"
            />
        <item android:id="@+id/nav_idioma" android:icon="@drawable/ic_menu_sort_by_size"
            android:title="@string/Idiomas"
            />
        <!--<item android:id="@+id/nav_manual" android:icon="@drawable/ic_menu_agenda"
            android:title="@string/Manual"
            />Como no esta actualizado, lo he dejado comentado, solo hay que actualizar el pdf que esta subido en el servidor -->

    </group>

</menu>