<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="@dimen/nav_header_height"
    android:background="@color/blanco"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark" android:orientation="vertical"
    android:gravity="bottom">

    <ImageView android:layout_width="70dp" android:layout_height="70dp"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:src="@drawable/epilepsia" android:id="@+id/imageView" android:maxWidth="72px"/>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/SEIZ"
            android:textColor="#000000"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:textSize="20sp"
            android:layout_gravity="left"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/SAFE"
            android:textColor="#337ab7"
            android:id="@+id/textSafe"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:textSize="20sp"

            />

    </LinearLayout>


    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:text="@string/correo" android:id="@+id/textView43" android:textColor="@android:color/black" />

</LinearLayout>
